# cedar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RESPONSIBILITIES.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  deny.toml  lcov.info  maintainers.md  panic_safety.sh  rust-toolchain.toml  rustc-ice-2026-06-22T18_35_05-40959.txt  rustc-ice-2026-06-22T18_35_05-40960.txt  security.md  style_guide.md
cedar-language-server/: Cargo.toml
cedar-language-server/src/: document.rs  documentation.rs  entities.rs  lib.rs  lsp.rs  main.rs  markdown.rs  policy.rs  position.rs  schema.rs  server.rs  test_utils.rs  utils.rs
cedar-language-server/src/documentation/: action.rs  arithmetic.rs  comparison.rs  context.rs  entity.rs  extension.rs  hierarchy.rs  logical.rs  primitive.rs  principal.rs  resource.rs
cedar-language-server/src/markdown/: documentation.rs
cedar-language-server/src/policy/: completion.rs  definition.rs  diagnostics.rs  fold.rs  format.rs  hover.rs  loc.rs  quickfix.rs  quickpick.rs  symbols.rs  types.rs
cedar-language-server/src/schema/: completions.rs  definition.rs  diagnostics.rs  fold.rs  symbols.rs
cedar-language-server/src/server/: test.rs
cedar-language-server/test-data/: goto_def.cedarschema  policies.cedarschema
cedar-lean-symc/: Cargo.toml  README.md
cedar-lean-symc/src/: emit.rs  error.rs  lib.rs  main.rs  property.rs
cedar-lean-symc/tests/: cedar_spec_stub.lean  integration_tests.rs
cedar-lean-symc/tests/common/: mod.rs
cedar-partial-evaluation/: Cargo.toml
cedar-partial-evaluation/src/: entities.rs  evaluator.rs  lib.rs  request.rs  residual.rs  tpe.rs
cedar-policy/: CHANGELOG.md  Cargo.toml  README.md  build.rs  dhat-heap.json
cedar-policy-cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cedarschema
cedar-policy-cli/protobuf_schema/: AST.proto  CLI.proto  Validator.proto
cedar-policy-cli/sample-data/: README.md
cedar-policy-cli/sample-data/sandbox_a/: README.md  entities.json  policies_1.cedar  policies_1_bad.cedar  policies_2.cedar  policies_3.txt  schema.cedarschema
cedar-policy-cli/sample-data/sandbox_b/: README.md  context.json  context_deny.json  entities.json  (+6 more)
cedar-policy-cli/src/: command.rs  err.rs  lib.rs  main.rs  utils.rs
cedar-policy-cli/tests/: sample.rs  symcc.rs
cedar-policy-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  checklist  clippy.toml
cedar-policy-core/cedar-policy-macros/: Cargo.toml
cedar-policy-core/protobuf_schema/: AST.proto
cedar-policy-core/schema/: AST.proto  AuthorizationRequest.proto  Request.proto
cedar-policy-core/src/: ast.rs  authorizer.rs  batched_evaluator.rs  entities.rs  error_code.rs  error_macros.rs  est.rs  evaluator.rs  expr_builder.rs  extensions.rs  from_normalized_str.rs  fuzzy.rs  fuzzy_match.rs  jsonvalue.rs  lib.rs  parser.rs  slicer.rs  spec.rs  test_utils.rs  tpe.rs  transitive_closure.rs  validator.rs  verus_utils.rs
cedar-policy-core/tests/: README.md  rbac_fuzz_test.rs
cedar-policy-formatter/: CHANGELOG.md  Cargo.toml  README.md
cedar-policy-formatter/src/: lib.rs
cedar-policy-formatter/tests/: action_in_set.cedar  annotations.cedar  arith.cedar  blank_lines.cedar  comment_euid_elems.cedar  comment_only.cedar  comment_trailing_whitespace.cedar  empty_list.cedar  empty_record.cedar  extended_has.cedar  index.cedar  is_policies.cedar  is_policies_formatted.cedar  ite_comment.cedar  like.cedar  long_attr_access.cedar  policies.txt  policies_formatted.cedar  policies_formatted.txt  record_formatting.cedar  test.txt  test_formatted.cedar  test_formatted.txt  trivial_forbid.cedar  trivial_permit.cedar
cedar-policy-symcc/: CHANGELOG.md  Cargo.toml  README.md  cvc5_tee.py
cedar-policy-symcc/src/: err.rs  lib.rs  symcc.rs  symccopt.rs
cedar-policy-symcc/tests/: cedar_examples.rs  datetime.rs  decimal.rs  integration_tests.rs  ipaddr.rs  properties.rs  term.rs  well_typed.rs
cedar-policy-validator/: CHANGELOG.md  Cargo.toml  README.md  build.rs  experimental_warning.md  test.txt
cedar-policy-validator/overflow-checking-example/: entities.json  policies.txt  request.json  schema.json
cedar-policy-validator/protobuf_schema/: Validator.proto
cedar-policy-validator/schema/: ValidationRequest.proto  Validator.proto
cedar-policy-validator/src/: annotations.rs  cedar_schema.rs  compat.rs  coreschema.rs  custom_schema.rs  deprecated_schema_compat.rs  diagnostics.rs  entity_loader.rs  entity_manifest.rs  entity_manifest_analysis.rs  entity_manifest_type_annotations.rs  entity_slicing.rs  err.rs  expr_iterator.rs  extension_schema.rs  extensions.rs  fuzzy_match.rs  human_schema.rs  json_schema.rs  level_validate.rs  lib.rs  parition_nonempty.rs  partition_nonempty.rs  rbac.rs  schema.rs  schema_file_format.rs  schema_syntax.rs  str_checks.rs  type_error.rs  typecheck.rs  types.rs  validation_result.rs
cedar-policy/benches/: attr_errors.rs  cedar_benchmarks.rs  context_json_parsing.rs  deeply_nested_est.rs  entity_attr_errors.rs  entity_parsing.rs  extension_fn_validation.rs  from_ast.rs  transitive_closure.rs
cedar-policy/macro-tests/: fail.rs  fail.stderr
cedar-policy/protobuf_schema/: core.proto  validator.proto
cedar-policy/src/: api.rs  cedar_test_impl.rs  integration_testing.rs  lib.rs  prop_test_policy_set.rs  proto.rs  test.rs  tests.rs
cedar-policy/tests/: corpus_tests.rs  decimal.rs  example_use_cases_doc.rs  ip.rs  multi.rs  proto_decode_regression.rs  proto_generate_test_files.rs  public_interface.rs
cedar-testing/: Cargo.toml  README.md
cedar-testing/src/: cedar_test_impl.rs  integration_testing.rs  lib.rs  test_files.rs
cedar-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  build.rs  package.json.patch  rust-toolchain  rust-toolchain.toml
cedar-wasm/.cargo/: config.toml
cedar-wasm/src/: authorizer.rs  formatter.rs  lib.rs  policies_and_templates.rs  schema_and_entities_and_context.rs  schema_validator.rs  utils.rs  validator.rs
cedar-wasm/tests/: lib.rs
tpe-analysis-test/: Cargo.toml
tpe-analysis-test/src/: main.rs  tpe_with_analysis.rs
(+3543 files in other folders)
