[workspace]
members = [
	"cedar-policy",
	"cedar-policy-core",
	"cedar-policy-validator",
	"cedar-policy-formatter",
	"cedar-policy-cli",
	"cedar-testing",
	"cedar-wasm"
]

resolver = "2"

# Enable global integer overflow detection for the release profile
[profile.release]
overflow-checks = true

# Keys that packages can inherit
[workspace.package]
repository = "https://github.com/cedar-policy/cedar"