[package]
name = "cedar-partial-evaluation"
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
cedar-policy-core = { version = "=4.4.0", path = "../cedar-policy-core" }
cedar-policy-validator = { version = "=4.4.0", path = "../cedar-policy-validator" }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
smol_str = "0.3.2"

[lints]
workspace = true
