[package]
name = "cedar-policy-cli"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
description = "CLI interface for the Cedar Policy language."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy = { version = "=4.1.0", path = "../cedar-policy" }
cedar-policy-formatter = { version = "=4.1.0", path = "../cedar-policy-formatter" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0"
semver = "1.0.23"

[features]
default = []
experimental = ["permissive-validate", "partial-validate", "partial-eval", "protobufs"]
permissive-validate = ["cedar-policy/permissive-validate"]
partial-validate = ["cedar-policy/partial-validate"]
partial-eval = ["cedar-policy/partial-eval"]

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
glob = "0.3.2"
predicates = "3.1.3"
rstest = "0.24.0"

# We override the name of the binary for src/main.rs, which otherwise would be
# cedar-policy-cli (matching the crate name).
[[bin]]
name = "cedar"
path = "src/main.rs"

[lints]
workspace = true
