[package]
name = "cedar-policy-cli"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
description = "CLI interface for the Cedar Policy language."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy = { version = "=4.8.2", path = "../cedar-policy" }
cedar-policy-formatter = { version = "=4.8.2", path = "../cedar-policy-formatter" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0"
semver = "1.0.27"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }

[features]
default = []
experimental = ["permissive-validate", "partial-validate", "partial-eval", "tpe"]
permissive-validate = ["cedar-policy/permissive-validate"]
partial-validate = ["cedar-policy/partial-validate"]
partial-eval = ["cedar-policy/partial-eval"]
tpe = ["cedar-policy/tpe", "cedar-policy/partial-eval"]

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3"
glob = "0.3.2"
predicates = "3.1.3"
rstest = "0.26.1"
graphviz-rust = {version = "0.9.6",  default-features = false }

# We override the name of the binary for src/main.rs, which otherwise would be
# cedar-policy-cli (matching the crate name).
[[bin]]
name = "cedar"
path = "src/main.rs"

[lints]
workspace = true
