[package]
name = "cedar-policy-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
description = "Policy formatter for the Cedar Policy Language."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy-core = { version = "=4.1.0", path = "../cedar-policy-core" }
pretty = "0.12.1"
logos = "0.14.0"
itertools = "0.13"
smol_str = { version = "0.3", features = ["serde"] }
regex = { version= "1.9.1", features = ["unicode"] }
miette = { version = "7.1.0" }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.38.0", features = ["glob"] }
