[package]
name = "cedar-policy-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
description = "Policy formatter for the Cedar Policy Language."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy-core = { version = "=4.8.0", path = "../cedar-policy-core" }
pretty = "0.12.5"
logos = "0.15.1"
itertools = "0.14"
smol_str = { version = "0.3", features = ["serde"] }
regex = { version= "1.12.2", features = ["unicode"] }
miette = { version = "7.6.0" }

[dev-dependencies]
insta = { version = "1.44.1", features = ["glob"] }

[lints]
workspace = true

[features]
tolerant-ast = ["cedar-policy-core/tolerant-ast"]
experimental = ["tolerant-ast"]
