[package]
name = "cedar-policy-symcc"
edition.workspace = true
rust-version.workspace = true
version = "0.5.0"
license.workspace = true
categories.workspace = true
description = "Symbolic Cedar Compiler (SymCC): translates queries about Cedar policies to SMT"
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy = { path = "../cedar-policy", version = "=4.11.0" }
cedar-policy-core = { path = "../cedar-policy-core", version = "=4.11.0" }
async-recursion = "1.1"
itertools = "0.15"
ref-cast = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["io-util", "process", "sync", "time", "rt"] }
num-bigint = "0.5"
num-traits = "0.2"
chrono = "0.4.45"
miette = "7.6.0"
nonempty = "0.12.0"

[dev-dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.52", features = ["full"] } # for `tokio::test` unit tests
rstest = "0.26.1"
cool_asserts = "2.0"
insta = "1.47"

[features]
experimental = ["variadic-is-in-range"]
variadic-is-in-range = []

[lints]
workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]\n\nCedar Language Version: TBD", replace = "## [Unreleased]\n\nCedar Language Version: TBD\n\n## [{{version}}] - Coming soon\n\nCedar Language Version: $$CEDAR_LANGUAGE_VERSION$$", exactly = 1 },
]