[package]
name = "cedar-policy-validator"
edition = "2021"

version = "3.0.0"
license = "Apache-2.0"
categories = ["compilers", "config"]
description = "Validator for the Cedar Policy language."
keywords = ["cedar", "authorization", "policy", "security"]
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/cedar"

[dependencies]
cedar-policy-core = { version = "=3.0.0", path = "../cedar-policy-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.0"
miette = "7.1.0"
thiserror = "1.0"
itertools = "0.12"
unicode-security = "0.1.0"
smol_str = { version = "0.2", features = ["serde"] }
stacker = "0.1.15"
arbitrary = { version = "1", features = ["derive"], optional = true }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
nonempty = "0.9.0"

[features]
# by default, enable all Cedar extensions
default = ["ipaddr", "decimal"]
# when enabling a feature, make sure that the Core feature is also enabled
ipaddr = ["cedar-policy-core/ipaddr"]
decimal = ["cedar-policy-core/decimal"]

# Enables `Arbitrary` implementations for several types in this crate
arbitrary = ["dep:arbitrary"]

# Experimental features.
partial-validate = []

[dev-dependencies]
cool_asserts = "2.0"

[build-dependencies]
lalrpop = "0.20.0"
