[package]
name = "cedar-policy-validator"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
categories.workspace = true
description = "Validator for the Cedar Policy language."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cedar-policy-core = { version = "=4.2.2", path = "../cedar-policy-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.0"
miette = "7.1.0"
thiserror = "1.0"
itertools = "0.13"
ref-cast = "1.0"
unicode-security = "0.1.0"
smol_str = { version = "0.3", features = ["serde"] }
stacker = "0.1.15"
arbitrary = { version = "1", features = ["derive"], optional = true }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
nonempty = "0.10.0"

# wasm dependencies
serde-wasm-bindgen = { version = "0.6", optional = true }
tsify = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.82", optional = true }

[features]
# by default, enable all Cedar extensions
default = ["ipaddr", "decimal"]
# when enabling a feature, make sure that the Core feature is also enabled
ipaddr = ["cedar-policy-core/ipaddr"]
decimal = ["cedar-policy-core/decimal"]
partial-eval = ["cedar-policy-core/partial-eval"]

# Enables `Arbitrary` implementations for several types in this crate
arbitrary = ["dep:arbitrary", "cedar-policy-core/arbitrary"]

# Experimental features.
partial-validate = []
level-validate = []
wasm = ["serde-wasm-bindgen", "tsify", "wasm-bindgen"]
entity-manifest = []

[dev-dependencies]
similar-asserts = "1.5.0"
cool_asserts = "2.0"
cedar-policy-core = { version = "=4.2.2", path = "../cedar-policy-core", features = ["test-util"] }
miette = { version = "7.1.0", features = ["fancy"] }

[build-dependencies]
lalrpop = "0.22.0"
